ржасширил возможность пропертирид. теперь можно просматривать двусвязный список джоинтов прямо из боди

--- a/Game/LevelEditor/LevelEditor.csproj
+++ b/Game/LevelEditor/LevelEditor.csproj
@@ -112,7 +112,7 @@
     <Compile Include="TabHiddenHeadersControl.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="TypeConverters\ExpandableListConverter.cs" />
+    <Compile Include="TypeConverters\ExpandableConverters.cs" />
     <Compile Include="XnaControls\ObjectScreen.cs">
       <SubType>Component</SubType>
     </Compile>
