XML-сериализация: целиком передал систему custom-сериализации и сильно поменял механизм обработки CR (кольцевых ссылок). Добавил custom-сериализаторы для World, Body, Fixture. Нужно решить проблему с Texture2D.GetType() == typeof(RenderTarget2D)

--- a/Game/XMLExtendedSerialization/XMLExtendedSerialization.csproj
+++ b/Game/XMLExtendedSerialization/XMLExtendedSerialization.csproj
@@ -52,10 +52,10 @@
     <Compile Include="Extension Classes\StringXMLExtensions.cs" />
     <Compile Include="Extension Classes\TypeXMLExtensions.cs" />
     <Compile Include="Attributes\XMLCustomConverterAttribute.cs" />
-    <Compile Include="Attributes\XMLCustomSerializerAttribute.cs" />
     <Compile Include="Attributes\XMLDoNotSerializeAttribute.cs" />
     <Compile Include="Attributes\XMLMetadataAttribute.cs" />
     <Compile Include="SerializerException.cs" />
+    <Compile Include="SerializerHelpers.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="XMLSerializerEx.cs" />
   </ItemGroup>
