--- a/Game/FarseerTools/FarseerTools.csproj
+++ b/Game/FarseerTools/FarseerTools.csproj
@@ -68,12 +68,15 @@
     <Compile Include="DrawingSystem\Sprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenSystem\ConvertUnits.cs" />
+    <Compile Include="Serializing\BodyXMLSerializer.cs" />
+    <Compile Include="Serializing\FixtureXMLSerializer.cs" />
     <Compile Include="Serializing\ObjectMetadataDictionary.cs" />
     <Compile Include="Serializing\ShapeParametersKeys.cs" />
     <Compile Include="Serializing\Texture2DHelpers.cs" />
     <Compile Include="Serializing\Texture2DXMLSerializer.cs" />
     <Compile Include="Serializing\TextureMetadataKeys.cs" />
     <Compile Include="Serializing\TextureSerializerSettings.cs" />
+    <Compile Include="Serializing\WorldXMLSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Farseer Physics Engine 3.3 XNA\Farseer Physics XNA.csproj">
